# nirviz

./: .gitignore  README.md  __init__.py  __main__.py  example.ipynb  example.py  flake.nix  nirviz.py  pyproject.toml  srnn.nir  style.yml
nirviz/: __main__.py  nirviz.py  style.yml
