[build-system]
requires = [
  "setuptools>=60",
  "setuptools-scm>=8.0"
]

[project]
name = "nirviz"
description = "Visualisation tool for the Neuromorphic Intermediate Representation"
readme = "README.md"
authors = [
        { name = "Jens Egholm Pedersen", email = "jens@jepedersen.dk" },
        { name = "Michail Rontionov", email = "mrontionov@mront.io" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["nir", "graphviz", "cairosvg", "pyyaml"]
dynamic = ["version"] # Version number read from __init__.py
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/open-neuromorphic/nirviz"

[tool.setuptools]
packages = ["nirviz"]