[build-system]
requires = [
  "setuptools>=77.0.0",
  "setuptools-scm>=8.0",
  "wheel",
  "build"
]
build-backend = "setuptools.build_meta"


[project]
name = "nirviz"
version = "0.1.0"
description = "Visualisation tool for the Neuromorphic Intermediate Representation"
license-files = ["LICENSE"]
license = "BSD-3-Clause"
readme = "README.md"
authors = [
        { name = "Jens Egholm Pedersen", email = "jens@jepedersen.dk" },
        { name = "Michail Rontionov", email = "mrontionov@mront.io" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["nir", "graphviz", "cairosvg", "pyyaml"]
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/open-neuromorphic/nirviz"

[tool.setuptools]
packages = ["nirviz"]